# payer-policy-drift-sentinel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
data/test-fixtures/: mock_databricks_outputs.json  mock_policy_retrieval_results.json  synthetic_appeals.json  synthetic_authorizations.json  synthetic_claim_lines.json  synthetic_denial_events.json  synthetic_policy_versions.json  synthetic_providers.json
docs/: architecture.mermaid  interview-demo-guide.md  live-demo-runbook.md  model-economics.md  trust-model.md
evals/golden/: golden_drift_scenarios.json
infra/terraform/: azure_container_apps.tf  azure_container_registry.tf  azure_identity.tf  azure_key_vault.tf  azure_observability.tf  azure_openai.tf  azure_resource_group.tf  databricks_jobs.tf  databricks_unity_catalog.tf  databricks_workspace.tf  live.auto.tfvars.example  main.tf  outputs.tf  snowflake_database.tf  snowflake_roles_grants.tf  snowflake_tables.tf  variables.tf
notebooks/databricks/: 01_ingest_from_snowflake.py  02_build_features.py  03_detect_drift.py  04_prepare_policy_retrieval.py  05_write_findings.py
scripts/: cost_estimate_report.py  generate_synthetic_dataset.py  live_smoke_test.py  render_architecture_check.py  run_databricks_jobs.py  seed_snowflake.py
src/api/: main.py  routes_findings.py  routes_health.py  routes_review.py  routes_runs.py
tests/: conftest.py  test_context_builder.py  test_cost_gate.py  test_failure_modes.py  test_no_live_calls_in_tests.py  test_quality_gate.py  test_trust_boundaries.py  test_workflow_denial_spike.py
(+33 files in other folders)
