[project]
name = "payer-policy-drift-sentinel"
version = "0.1.0"
description = "Healthcare payer AI prototype for detecting policy, denial, authorization, appeal, and provider friction drift"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0",
    "httpx>=0.27.0",
    "snowflake-connector-python>=3.0",
    "databricks-sdk>=0.30.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
